# airflow_local

./: .gitignore  README.md  pyproject.toml  pytest.ini
test_dags/: sample_dag.py
tests/: test_sample.py
